--- a/index.html
+++ b/index.html
@@ -6,8 +6,298 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link rel="stylesheet" href="./css/main.css">
+  <link rel="stylesheet" href="./css/bootstrap.min.css">
 </head>
 <body>
-  
+  <header class="header">
+    <div class="containerown header__inner">
+      <a href="./index.html" class="header__link">
+        <img src="./img/logo.svg" alt="site logo" class="header__logo" width="178" height="37">
+      </a>
+      <nav class="header__nav">
+        <ul class="header__list">
+          <li class="header__item">
+            <a href="#" class="header__item__link header__item__link--first">Product</a>
+          </li>
+          <li class="header__item">
+            <a href="#" class="header__item__link">Customers</a>
+          </li>
+          <li class="header__item">
+            <a href="#" class="header__item__link">Pricing</a>
+          </li>
+          <li class="header__item">
+            <a href="#" class="header__item__link">Resources</a>
+          </li>
+          <li class="header__item">
+            <a href="#" class="header__item__link header__item__link--in">Sign In</a>
+          </li>
+          <li class="header__item">
+            <a href="#" class="header__item__link header__item__link--up">Sign Up</a>
+          </li>
+          <li class="header__item">
+            <button class="header__button ">
+              <img src="./img/headerbutton.png" srcset="./img/headerbutton.png 1x,./img/headerbutton@2x.png 2x" alt="button" width="32" height="32" class="header__item__img">
+            </button>
+          </li>
+
+        </ul>
+      </nav>
+    </div>
+  </header>
+
+<main>
+  <section class="hero">
+    <div class="containerown">
+      <div class="hero__inner">
+        <h1 class="hero__title">Work at the speed
+          of thought</h1>
+        <p class="hero__text">Tools, tutorials, design and innovation experts, all in one place! The most intuitive way to imagine your next user experience.</p>
+        <a href="#" class="hero__link">Get started</a>
+        <a href="" class="hero__connect">Watch the Video</a>
+      </div>
+    </div>
+  </section>
+
+  <section class="built">
+    <div class="containerown built__inner">
+      <h2 class="built__title">Product  was Built Specifically 
+       <br> for You</h2>
+      <ul class="built__list">
+        <li class="built__item">
+          <h3 class="built__heading">First click tests</h3>
+          <p class="built__text">While most people enjoy casino gambling,</p>
+        </li>
+        <li class="built__item">
+          <h3 class="built__heading">Design surveys</h3>
+          <p class="built__text">Sports betting, lottery and bingo playing for the fun,</p>
+        </li>
+        <li class="built__item">
+          <h3 class="built__heading">Preference tests</h3>
+          <p class="built__text">The Myspace page defines the individual.</p>
+        </li>
+        <li class="built__item">
+          <h3 class="built__heading">Five second tests</h3>
+          <p class="built__text">Personal choices and the overall personality of the person. </p>
+        </li>
+      </ul>
+      <a href="#" class="built__link">
+        SIGN UP NOW
+      </a>
+    </div>
+  </section>
+
+  <section class="service">
+    <div class="containerown service__inner">
+      <h2 class="visually-hidden">services</h2>
+      <ul class="service__list">
+        <li class="service__item">
+          <div class="service__content">
+            <p class="service__for">Effortless Validation for</p>
+            <h3 class="service__title service__title--top">Management</h3>
+            <span class="service__heading"> Accessory makers</span>
+            <p class="service__text service__text--top">While most people enjoy casino gambling, sports betting, lottery and bingo playing for the fun</p>
+            <span class="service__heading">Alterationists</span>
+            <p class="service__text service__text--bottom">If you are looking for a new way to promote your business that won’t cost you more money, </p>
+          </div>  
+          </li>
+          <li class="service__item">
+            <div class="service__content">
+              <p class="service__for">Easier decision making for</p>
+              <h3 class="service__title">Customer Support</h3>
+              <p class="service__text">The Myspace page defines the individual, his or her characteristics, traits, personal choices and the overall personality of the person. </p>
+              <p class="service__info service__text--yellow">Never worry about overpaying for your energy again. </p>
+              <p class="service__info service__text--red">We will only switch you to energy companies that we trust and will treat you right</p>
+              <p class="service__info service__text--blue">We track the markets daily and know where the savings are.</p>
+            </div>  
+            </li>
+        <li class="service__item">
+        <div class="service__content">
+          <p class="service__for">Optimisation for</p>
+          <h3 class="service__title">Collaborative</h3>
+          <p class="service__text">Few would argue that, despite the advancements of feminism over the past three decades, women still face a double standard when it comes to their behavior. </p>
+          <span class="service__heading"> Accessory makers</span>
+          <p class="service__text service__text--top">While most people enjoy casino gambling, sports betting, lottery and bingo playing for the fun</p>
+          <span class="service__heading">Alterationists</span>
+          <p class="service__text service__text--bottom">If you are looking for a new way to promote your business that won’t cost you more money, </p>
+        </div>  
+        </li>
+      </ul>
+    </div>
+  </section>
+  <section class="quick">
+    <div class="containerown quick__inner">
+      <h2 class="quick__title">Quick & Easy Process</h2>
+      <p class="quick__text">Do you require some help for your project: Conception workshop, <br>
+        prototyping, marketing strategy, landing page, Ux/UI?</p>
+      <ul class="quick__list">
+        <li class="quick__item">
+          <div class="quick__content">
+            <img src="./img/pic1.png" srcset="./img/pic1.png 1x , ./img/pic1@2x.png 2x" alt="picture" class="quick__pic quick__pic--left" width="98" height="98">
+            <span class="quick__span">I can take care of your pitch</span>
+          </div>
+          <div class="quick__content">
+            <span class="quick__span">I can prototype your app</span>
+            <img src="./img/pic2.png" srcset="./img/pic2.png 1x , ./img/pic2@2x.png 2x" alt="picture" class="quick__pic" width="98" height="98">
+          </div>
+        </li>
+        <li class="quick__item">
+          <div class="quick__content">
+            <span class="quick__span">I can design you website</span>
+            <img src="./img/pic3.png" srcset="./img/pic3.png 1x , ./img/pic3@2x.png 2x" alt="picture" class="quick__pic quick__pic--left" width="98" height="98">
+          </div>
+          <div class="quick__content">
+            <img src="./img/pic4.png" srcset="./img/pic4.png 1x , ./img/pic4@2x.png 2x" alt="picture" class="quick__pic" width="98" height="98">
+            <span class="quick__span">I can help marketing strategy</span>
+          </div>
+        </li>
+      </ul>
+      <a href="#" class="quick__link">Contact our expert</a>    
+    </div>
+  </section>
+
+  <section class="carusel">
+    <div class="containerown carusel__inner">
+      <h2 class="carusel__title">Contents Strategies</h2>
+      <p class="carusel__text">We focus on ergonomics and meeting you where you work. It's only a keystroke away. </p>
+      <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active d-flex justify-content-between">
+            <div class="card" style="width: 348px;">
+              <img src="./img/card1.png" class="card-img-top" alt="phot">
+              <div class="card-body">
+                <p class="carusel__owner">By <span class="carusel__date">Wahid Ari </span>|  03 March 2019</p>
+                <p class="carusel__info">Increasing Prosperity With Positive Thinking</p>
+              </div>
+            </div>
+            <div class="card" style="width: 348px;">
+              <img src="./img/card2.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <p class="carusel__owner">By <span class="carusel__date">Wahid Ari </span>|  03 March 2019</p>
+                <p class="carusel__info carusel__info--middle">Motivation Is The First Step To Success</p>
+              </div>
+            </div>
+            <div class="card" style="width: 348px;">
+              <img src="./img/card3.png" class="card-img-top" alt="photo">
+              <div class="card-body">
+                <p class="carusel__owner">By <span class="carusel__date">Wahid Ari </span>|  03 March 2019</p>
+                <p class="carusel__info">Success Steps For Your Personal Or Business</p>
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item d-flex justify-content-between">
+            <div class="card" style="width: 348px;">
+              <img src="./img/card1.png" class="card-img-top" alt="phot">
+              <div class="card-body">
+                <p class="carusel__owner">By <span class="carusel__date">Wahid Ari </span>|  03 March 2019</p>
+                <p class="carusel__info">Increasing Prosperity With Positive Thinking</p>
+              </div>
+            </div>
+            <div class="card" style="width: 348px;">
+              <img src="./img/card2.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <p class="carusel__owner">By <span class="carusel__date">Wahid Ari </span>|  03 March 2019</p>
+                <p class="carusel__info carusel__info--middle">Motivation Is The First Step To Success</p>
+              </div>
+            </div>
+            <div class="card" style="width: 348px;">
+              <img src="./img/card3.png" class="card-img-top" alt="photo">
+              <div class="card-body">
+                <p class="carusel__owner">By <span class="carusel__date">Wahid Ari </span>|  03 March 2019</p>
+                <p class="carusel__info">Success Steps For Your Personal Or Business</p>
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item d-flex justify-content-between">
+            <div class="card" style="width: 348px;">
+              <img src="./img/card1.png" class="card-img-top" alt="phot">
+              <div class="card-body">
+                <p class="carusel__owner">By <span class="carusel__date">Wahid Ari </span>|  03 March 2019</p>
+                <p class="carusel__info">Increasing Prosperity With Positive Thinking</p>
+              </div>
+            </div>
+            <div class="card" style="width: 348px;">
+              <img src="./img/card2.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <p class="carusel__owner">By <span class="carusel__date">Wahid Ari </span>|  03 March 2019</p>
+                <p class="carusel__info carusel__info--middle">Motivation Is The First Step To Success</p>
+              </div>
+            </div>
+            <div class="card" style="width: 348px;">
+              <img src="./img/card3.png" class="card-img-top" alt="photo">
+              <div class="card-body">
+                <p class="carusel__owner">By <span class="carusel__date">Wahid Ari </span>|  03 March 2019</p>
+                <p class="carusel__info">Success Steps For Your Personal Or Business</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="price">
+    <div class="containerown price__inner">
+      <h2 class="price__title">Price Table</h2>
+      <p class="price__text">We offer competitive price</p>
+          <ul class="price__list">
+            <li class="price__item price__info info">
+                <span class="info__title">Free</span>
+                <span class="info__text">Brief price description</span>
+                <span class="info__cost">
+                  0 <span class="info__time">
+                     <span class="info__money">$</span>
+                     <span class="info__month">Per / month</span>
+                  </span>
+                </span>
+                <span class="info__text">Only 2 Operators</span>
+                <span class="info__text">Notifications</span>
+                <span class="info__text">Landing Pages</span>
+                <a class="info__order">Order Now</a>
+            </li>
+            <li class="price__item price__info info">
+                <span class="info__title info__text--white">Free</span>
+                <span class="info__text info__text--white">Brief price description</span>
+                <span class="info__cost info__text--white">
+                  0 <span class="info__time info__text--white">
+                     <span class="info__money info__text--white">$</span>
+                     <span class="info__month info__text--white">Per / month</span>
+                  </span>
+                </span>
+                <span class="info__text info__text--white">Only 2 Operators</span>
+                <span class="info__text info__text--white">Notifications</span>
+                <span class="info__text info__text--white">Landing Pages</span>
+                <a class="info__order info__order--middle">Order Now</a>
+            </li>
+            <li class="price__item price__info info">
+                <span class="info__title">Free</span>
+                <span class="info__text">Brief price description</span>
+                <span class="info__cost">
+                  0 <span class="info__time">
+                     <span class="info__money">$</span>
+                     <span class="info__month">Per / month</span>
+                  </span>
+                </span>
+                <span class="info__text">Only 2 Operators</span>
+                <span class="info__text">Notifications</span>
+                <span class="info__text">Landing Pages</span>
+                <a class="info__order">Order Now</a>
+            </li>
+          </ul>
+    </div>
+  </section>
+  <section class="bottom">
+    <div class="container">
+      <div class="bottom__inner">
+        <div>
+          <h2 class="visually-hidden">you can buy offer</h2>
+          <p class="bottom__text">Join 100 Compannies who <br> boost their business with <br> Product</p>
+        <a href="#" class="bottom__link">Get This</a>
+        </div>
+      </div>
+    </div>
+  </section>
+</main>
+
+  <script src="./js/bootstrap.min.js"></script>
 </body>
 </html>
