--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
     </div>
   </section>
   <section class="bottom">
-    <div class="container">
+    <div class="containerown">
       <div class="bottom__inner">
         <div>
           <h2 class="visually-hidden">you can buy offer</h2>
@@ -297,7 +297,56 @@
     </div>
   </section>
 </main>
-
+<footer>
+ <div class="containerown">
+   <div class="container__inner">
+     <ul class="footer__list">
+       <li class="footer__item">
+         <a href="#" class="footer__logo">
+           <img src="./img/logo.svg" alt="site logo" width="178" height="37" class="footer__logo__img">
+         </a>
+         <div class="footer__app app">
+           <a href="https://www.instagram.com/" class="app__link">
+             <img src="./img/instagram.svg" width="40" height="40" alt="instagram" class="app__img">
+           </a>
+           <a href="https://www.facebook.com/" class="app__link">
+            <img src="./img/facebook.svg" width="40" height="40" alt="instagram" class="app__img">
+          </a>
+          <a href="https://www.twitter.com/" class="app__link">
+            <img src="./img/twitter.svg" width="40" height="40" alt="instagram" class="app__img">
+          </a>
+         </div>
+       </li>
+       <li class="footer__item">
+         <a class="footer__title">Resource</a>
+         <a class="footer__text">About us</a>
+         <a class="footer__text">Blog</a>
+         <a class="footer__text">Contact</a>
+         <a class="footer__text">FAQ</a>
+       </li>
+       <li class="footer__item">
+        <a class="footer__title">Legal Stuff</a>
+        <a class="footer__text">Disclaimer</a>
+        <a class="footer__text">Financing</a>
+        <a class="footer__text">Privacy Policy</a>
+        <a class="footer__text">Terms of Service</a>
+      </li>
+      <li class="footer__item">
+        <form class="footer__form" action="https://echo.htmlacademy.ru/courses" method="post">
+          <label  class="footer__label">
+            knowing you're always on the best energy deal. 
+            <input type="text" class="footer__input form-control" name="smth">
+            
+          </label>
+          <button class="footer__button" type="submit">Sign up Now</button>
+        </form>
+      </li>
+     </ul>
+     <p class="footer__end">Made With Love By Figmaland All Right Reserved 
+    </p>
+   </div>
+ </div>
+</footer>
   <script src="./js/bootstrap.min.js"></script>
 </body>
 </html>
