--- a/costumer.html
+++ b/costumer.html
@@ -123,7 +123,7 @@
     <section class="offer">
       <div class="containerown">
         <div class="offer__inner">
-          <h2 class="offer__title">Join thousand of other who have <br>
+          <h2 class="offer__title">Join thousand of other who have 
             already received offers</h2>
           <ul class="offer__list">
             <li class="offer__item">
@@ -152,7 +152,7 @@
     <section class="bottom">
       <div class="containerown">
         <div class="bottom__inner">
-          <div>
+          <div class="bottom__content">
             <h2 class="visually-hidden">you can buy offer</h2>
             <p class="bottom__text">Join 100 Compannies who <br> boost their business with <br> Product</p>
           <a href="#" class="bottom__link">Get This</a>
