--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
   <section class="built">
     <div class="containerown built__inner">
       <h2 class="built__title">Product  was Built Specifically 
-       <br> for You</h2>
+       for You</h2>
       <ul class="built__list">
         <li class="built__item">
           <h3 class="built__heading">First click tests</h3>
@@ -97,6 +97,7 @@
           <div class="service__content">
             <p class="service__for">Effortless Validation for</p>
             <h3 class="service__title service__title--top">Management</h3>
+            <p class="service__text">The Myspace page defines the individual, his or her characteristics, traits, personal choices and the overall personality of the person. </p>
             <span class="service__heading"> Accessory makers</span>
             <p class="service__text service__text--top">While most people enjoy casino gambling, sports betting, lottery and bingo playing for the fun</p>
             <span class="service__heading">Alterationists</span>
@@ -130,26 +131,26 @@
   <section class="quick">
     <div class="containerown quick__inner">
       <h2 class="quick__title">Quick & Easy Process</h2>
-      <p class="quick__text">Do you require some help for your project: Conception workshop, <br>
+      <p class="quick__text">Do you require some help for your project: Conception workshop, 
         prototyping, marketing strategy, landing page, Ux/UI?</p>
       <ul class="quick__list">
         <li class="quick__item">
           <div class="quick__content">
-            <img src="./img/pic1.png" srcset="./img/pic1.png 1x , ./img/pic1@2x.png 2x" alt="picture" class="quick__pic quick__pic--left" width="98" height="98">
+            <img src="./img/pic1.png" srcset="./img/pic1.png 1x , ./img/pic1@2x.png 2x" alt="picture" class="quick__pic quick__pic--left" >
             <span class="quick__span">I can take care of your pitch</span>
           </div>
           <div class="quick__content">
             <span class="quick__span">I can prototype your app</span>
-            <img src="./img/pic2.png" srcset="./img/pic2.png 1x , ./img/pic2@2x.png 2x" alt="picture" class="quick__pic" width="98" height="98">
+            <img src="./img/pic2.png" srcset="./img/pic2.png 1x , ./img/pic2@2x.png 2x" alt="picture" class="quick__pic" >
           </div>
         </li>
         <li class="quick__item">
           <div class="quick__content">
             <span class="quick__span">I can design you website</span>
-            <img src="./img/pic3.png" srcset="./img/pic3.png 1x , ./img/pic3@2x.png 2x" alt="picture" class="quick__pic quick__pic--left" width="98" height="98">
+            <img src="./img/pic3.png" srcset="./img/pic3.png 1x , ./img/pic3@2x.png 2x" alt="picture" class="quick__pic quick__pic--left" >
           </div>
           <div class="quick__content">
-            <img src="./img/pic4.png" srcset="./img/pic4.png 1x , ./img/pic4@2x.png 2x" alt="picture" class="quick__pic" width="98" height="98">
+            <img src="./img/pic4.png" srcset="./img/pic4.png 1x , ./img/pic4@2x.png 2x" alt="picture" class="quick__pic" >
             <span class="quick__span">I can help marketing strategy</span>
           </div>
         </li>
@@ -164,7 +165,7 @@
       <p class="carusel__text">We focus on ergonomics and meeting you where you work. It's only a keystroke away. </p>
       <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
-          <div class="carousel-item active d-flex justify-content-between ">
+          <div class="carousel-item active carousel__item">
             <div class="card" style="width: 348px;">
               <img src="./img/card1.png" class="card-img-top" alt="phot">
               <div class="card-body">
@@ -187,7 +188,7 @@
               </div>
             </div>
           </div>
-          <div class="carousel-item d-flex justify-content-between">
+          <div class="carousel-item carousel__item">
             <div class="card" style="width: 348px;">
               <img src="./img/card1.png" class="card-img-top" alt="phot">
               <div class="card-body">
@@ -210,7 +211,7 @@
               </div>
             </div>
           </div>
-          <div class="carousel-item d-flex justify-content-between">
+          <div class="carousel-item carousel__item">
             <div class="card" style="width: 348px;">
               <img src="./img/card1.png" class="card-img-top" alt="phot">
               <div class="card-body">
@@ -300,7 +301,7 @@
    <section class="client">
      <div class="containerown client__inner">
        <h2 class="client__title">What Clients Say</h2>
-       <p class="clinet__text">Problems trying to resolve the conflict between <br>
+       <p class="client__text">Problems trying to resolve the conflict between
         the two major realms of Classical physics: Newtonian mechanics </p>
        <ul class="client__list">
          <li class="client__item">
@@ -349,9 +350,9 @@
   <section class="bottom">
     <div class="containerown">
       <div class="bottom__inner">
-        <div>
+        <div class="bottom__content">
           <h2 class="visually-hidden">you can buy offer</h2>
-          <p class="bottom__text">Join 100 Compannies who <br> boost their business with <br> Product</p>
+          <p class="bottom__text">Join 100 Compannies who  boost their business with  Product</p>
         <a href="#" class="bottom__link">Get This</a>
         </div>
       </div>
