--- a/pricing.html
+++ b/pricing.html
@@ -103,7 +103,7 @@
       <div class="containerown">
         <div class="enterprise__inner">
           <h2 class="enterprise__title">ENTERPRISE</h2>
-          <p class="enterprise__question">Are you interested  in a custom-tailored plan?</p>
+          <p class="enterprise__question">Are you interested  in a custom tailored plan?</p>
           <p class="enterprise__text">Product is a set of advanced features for really large teams with projects.</p>
           <a href="#" class="enterprise__link">Get in touch with us</a>
         </div>
@@ -153,7 +153,7 @@
     <section class="bottom">
       <div class="containerown">
         <div class="bottom__inner">
-          <div>
+          <div class="bottom__content">
             <h2 class="visually-hidden">you can buy offer</h2>
             <p class="bottom__text">Join 100 Compannies who <br> boost their business with <br> Product</p>
           <a href="#" class="bottom__link">Get This</a>
