--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>MyProduct</title>
   <link rel="stylesheet" href="./css/main.css">
   <link rel="stylesheet" href="./css/bootstrap.min.css">
 </head>
@@ -14,7 +14,7 @@
       <a href="./index.html" class="header__link">
         <img src="./img/logo.svg" alt="site logo" class="header__logo" width="178" height="37">
       </a>
-      <nav class="header__nav">
+      <nav class="header__nav header__nav--open">
         <ul class="header__list">
           <li class="header__item">
             <a href="./index.html" class="header__item__link header__item__link--first">Product</a>
@@ -26,7 +26,7 @@
             <a href="./pricing.html" class="header__item__link">Pricing</a>
           </li>
           <li class="header__item">
-            <a href="#" class="header__item__link">Resources</a>
+            <a href="./resource.html" class="header__item__link">Resources</a>
           </li>
           <li class="header__item">
             <a href="#" class="header__item__link header__item__link--in">Sign In</a>
@@ -409,6 +409,6 @@
    </div>
  </div>
 </footer>
-  <script src="./js/bootstrap.min.js"></script>
+  <script src="./js/main.js"></script>
 </body>
 </html>
