--- a/pricing.html
+++ b/pricing.html
@@ -201,7 +201,7 @@
            <form class="footer__form" action="https://echo.htmlacademy.ru/courses" method="post">
              <label  class="footer__label">
                knowing you're always on the best energy deal. 
-               <input type="text" class="footer__input form-control" name="smth">
+               <input type="text" class="footer__input " name="smth">
                
              </label>
              <button class="footer__button" type="submit">Sign up Now</button>
